# social-media-backend

./: .env  .env.example  Cargo.toml  README.md  Rocket.toml
migrations/2024-05-06-174057_Users/: up.sql
migrations/2024-05-06-174319_Posts/: down.sql  up.sql
migrations/2024-05-13-130503_create_comments/: up.sql
migrations/2024-05-13-131413_create_notifications/: up.sql
migrations/2024-06-12-171307_create_friend_requests/: down.sql  up.sql
src/: authorization.rs  aws_s3.rs  jwt.rs  lib.rs  main.rs  models.rs  schema.rs
src/respositories/: comments.rs  friend_request.rs  notifications.rs  posts.rs  users.rs
