[package]
name = "social-media-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"

[dependencies]
rocket = {version = "0.5.0", features = ["json"] }
serde_json = "1.0.116"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15"
serde = { version = "1.0.200", features = ["derive"]}
scrypt = { version = "0.2" }
rocket_cors = "0.6.0"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
ring = "0.17.8"

[dependencies.rocket_sync_db_pools]
version = "0.1.0"
features = ["diesel_postgres_pool"]
