[package]
name = "social-media-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"

[dependencies]
rocket = {version = "0.5.0", features = ["json"] }
serde_json = "1.0.116"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15"
serde = { version = "1.0.200", features = ["derive"]}
scrypt = { version = "0.2" }
rocket_cors = "0.6.0"
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
ring = "0.17.8"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.29.0", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["full"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0"
features = ["diesel_postgres_pool"]

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]